--- a/Server/MuchToDo/docker-compose.yaml
+++ b/Server/MuchToDo/docker-compose.yaml
@@ -10,24 +10,23 @@ services:
       MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD:-example}
       MONGO_INITDB_DATABASE: ${DB_NAME:-much_todo_db}
     # Use a command that sets permissions and then starts mongod
-    # command:
-    #   [
-    #     "--replSet",
-    #     "rs0",
-    #     "--bind_ip_all",
-    #     "--keyFile",
-    #     "/data/keyfile/mongodb.key",
-    #   ]
+    command:
+      [
+        "--replSet",
+        "rs0",
+        "--bind_ip_all",
+        "--keyFile",
+        "/data/keyfile/mongodb.key",
+      ]
     # Create a keyfile and mount it to the container
     # openssl rand -base64 756 > mongodb.key && chmod 400 mongodb.key
     volumes:
       - mongo_data:/data/db
-      # - mongodb_config:/data/configdb
+      - mongodb_config:/data/configdb
       # Mount the keyfile to a standard config location
-      # - ./mongodb.key:/data/keyfile/mongodb.key:ro
+      - ./mongodb.key:/data/keyfile/mongodb.key:ro
     healthcheck:
-      # test: echo "try { rs.status() } catch (err) { rs.initiate({_id:'rs0',members:[{_id:0,host:'${MONGO_HOST:-mongodb}:27017'}]}) }" | mongosh --port 27017 -u ${MONGO_INITDB_ROOT_USERNAME:-root} -p ${MONGO_INITDB_ROOT_PASSWORD:-example} --authenticationDatabase admin --quiet
-      test: ["CMD", "mongosh", "--eval", "db.adminCommand('ping')"]
+      test: echo "try { rs.status() } catch (err) { rs.initiate({_id:'rs0',members:[{_id:0,host:'${MONGO_HOST:-mongodb}:27017'}]}) }" | mongosh --port 27017 -u ${MONGO_INITDB_ROOT_USERNAME:-root} -p ${MONGO_INITDB_ROOT_PASSWORD:-example} --authenticationDatabase admin --quiet
       interval: 10s
       timeout: 10s
       retries: 5
@@ -36,31 +35,6 @@ services:
       - backend
     extra_hosts:
       - "host.docker.internal:host-gateway"
-
-
-# --- The Go Backend API ---
-  backend:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: backend-api
-    ports:
-      - "8080:8080"
-    depends_on:
-      mongodb:
-        condition: service_healthy
-      redis:
-        condition: service_started
-    environment:
-      - PORT=8080
-      # Updated URI to include the credentials you defined for Mongo
-      - MONGO_URI=mongodb://root:example@mongodb:27017/much_todo_db?authSource=admin
-      - JWT_SECRET_KEY=${JWT_SECRET_KEY}
-      - REDIS_ADDR=redis:6379
-    networks:
-      - backend
-    restart: always
-
 
   mongo-express:
     image: mongo-express:1.0.2
@@ -74,9 +48,7 @@ services:
       # ME_CONFIG_MONGODB_SERVER: ${MONGO_HOST:-mongodb}
       # ME_CONFIG_MONGODB_ADMINUSERNAME: ${MONGO_INITDB_ROOT_USERNAME:-root}
       # ME_CONFIG_MONGODB_ADMINPASSWORD: ${MONGO_INITDB_ROOT_PASSWORD:-example}
-      # ME_CONFIG_MONGODB_URL: mongodb://${MONGO_INITDB_ROOT_USERNAME:-root}:${MONGO_INITDB_ROOT_PASSWORD:-example}@mongodb:27017/?authSource=admin&replicaSet=rs0&directConnection=true
-
-      ME_CONFIG_MONGODB_URL: mongodb://root:example@mongodb:27017/?authSource=admin
+      ME_CONFIG_MONGODB_URL: mongodb://${MONGO_INITDB_ROOT_USERNAME:-root}:${MONGO_INITDB_ROOT_PASSWORD:-example}@mongodb:27017/?authSource=admin&replicaSet=rs0&directConnection=true
 
       ME_CONFIG_BASICAUTH_USERNAME: ${ME_CONFIG_BASICAUTH_USERNAME:-admin}
       ME_CONFIG_BASICAUTH_PASSWORD: ${ME_CONFIG_BASICAUTH_PASSWORD:-admin123}
