--- a/.github/workflows/frontend-ci-cd.yml
+++ b/.github/workflows/frontend-ci-cd.yml
@@ -6,7 +6,7 @@ on:
       - main
       - develop
     paths:
-      - 'frontend/**'
+      - 'Client/**'
       - '.github/workflows/frontend-ci-cd.yml'
   pull_request:
     branches:
