--- a/.github/workflows/backend-ci-cd.yml
+++ b/.github/workflows/backend-ci-cd.yml
@@ -6,8 +6,8 @@ on:
       - main
       - develop
     paths:
-      - 'Server/**'
-      - 'Server/MuchToDo/**'
+      - 'backend/**'
+      - 'backend/MuchToDo/**'
       - '.github/workflows/backend-ci-cd.yml'
   pull_request:
     branches:
@@ -33,7 +33,7 @@ jobs:
           go-version: '1.21'
 
       - name: Download dependencies
-        working-directory: Server/MuchToDo
+        working-directory: backend/MuchToDo
         run: go mod download
 
       - name: Run unit tests
@@ -92,7 +92,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
         with:
-          context: Server/MuchToDo
+          context: backend/MuchToDo
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
