--- a/.github/workflows/frontend-ci-cd.yml
+++ b/.github/workflows/frontend-ci-cd.yml
@@ -30,22 +30,22 @@ jobs:
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
-          cache-dependency-path: 'Client/package-lock.json'
+          cache-dependency-path: 'frontend/package-lock.json'
 
       - name: Install dependencies
-        working-directory: Client
+        working-directory: frontend
         run: npm ci
 
       - name: Run unit tests
-        working-directory: Client
+        working-directory: frontend
         run: npm test -- --run --passWithNoTests || true
 
       - name: Security audit
-        working-directory: Client
+        working-directory: frontend
         run: npm audit --audit-level=moderate || true
 
       - name: Build production bundle
-        working-directory: Client
+        working-directory: frontend
         run: npm run build
         env:
           VITE_API_URL: ${{ secrets.API_URL }}
@@ -54,7 +54,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: frontend-build
-          path: Client/dist
+          path: frontend/dist
           retention-days: 1
 
   deploy:
@@ -67,7 +67,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Download build artifacts
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: frontend-build
           path: dist
