--- a/.github/workflows/backend-ci-cd.yml
+++ b/.github/workflows/backend-ci-cd.yml
@@ -107,3 +107,65 @@ jobs:
         uses: github/codeql-action/upload-sarif@v2
         with:
           sarif_file: 'trivy-results.sarif'
+
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
+          aws-region: us-east-1
+
+      - name: Run smoke tests
+        run: |
+          for i in {1..5}; do
+            if curl -f http://${{ secrets.ALB_DNS }}/health; then
+              echo "Health check passed"
+              exit 0
+            fi
+            sleep 10
+          done
+          exit 1
+
+      - name: Deploy to EC2 via ASG
+        run: |
+          # Get the target group ARN
+          TG_ARN=$(aws elbv2 describe-target-groups \
+            --names "prod-backend-tg" \
+            --query 'TargetGroups[0].TargetGroupArn' \
+            --output text)
+          
+          # Get current instances
+          INSTANCES=$(aws elbv2 describe-target-health \
+            --target-group-arn $TG_ARN \
+            --query 'TargetHealthDescriptions[*].Target.Id' \
+            --output text)
+          
+          # Rolling update - update one instance at a time
+          for instance in $INSTANCES; do
+            echo "Updating instance $instance"
+            aws ec2 reboot-instances --instance-ids $instance
+            sleep 30
+          done
+
+      - name: Update Auto Scaling scaling policies
+        run: |
+          aws autoscaling put-scaling-policy \
+            --auto-scaling-group-name prod-backend-asg \
+            --policy-name target-tracking-scaling \
+            --policy-type TargetTrackingScaling \
+            --target-tracking-configuration '{
+              "TargetValue": 70.0,
+              "PredefinedMetricSpecification": {
+                "PredefinedMetricType": "ASGAverageCPUUtilization"
+              },
+              "ScaleOutCooldown": 60,
+              "ScaleInCooldown": 300
+            }' || true
