fix: use VITE_API_BASE_URL for production build
- Align workflow env var with frontend config
- Update .env.example to CloudFront /api

--- a/.github/workflows/frontend-ci-cd.yml
+++ b/.github/workflows/frontend-ci-cd.yml
@@ -47,7 +47,7 @@ jobs:
         working-directory: frontend
         run: npm run build
         env:
-          VITE_API_URL: ${{ secrets.API_URL }}
+          VITE_API_BASE_URL: ${{ secrets.API_URL }}
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
